# Charcoal-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Charcoal Engine.sln  LICENSE  README.md  README.org  premake5.lua
Charcoal/: CMakeLists.txt  Charcoal.vcxproj  Charcoal.vcxproj.filters
Charcoal/src/: Charcoal.h  chpch.cpp  chpch.h
Charcoal/src/Charcoal/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.h
Charcoal/src/Charcoal/Core/: Application.cpp  Application.h  Core.h  Enums.cpp  Enums.h  Log.cpp  Log.h  Timestep.h  Utilities.cpp  Utilities.h  Window.h
Charcoal/src/Charcoal/Debug/: Instrumentor.h
Charcoal/src/Charcoal/EntryPoint/: EntryPoint.h
Charcoal/src/Charcoal/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Charcoal/src/Charcoal/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Charcoal/src/Charcoal/Input/: Input.h  KeyCodes.h  MouseCodes.h
Charcoal/src/Charcoal/Layers/: Layer.h  LayerStack.cpp  LayerStack.h
Charcoal/src/Charcoal/Renderer/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Light.h  Material.cpp  Material.h  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  RendererEnums.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  SkyBox.cpp  SkyBox.h  SystemInitDefs.h  Texture.cpp  Texture.h  TextureUtilities.cpp  TextureUtilities.h  VertexArray.cpp  VertexArray.h
Charcoal/src/Charcoal/Scene/: Scene.cpp  Scene.h
Charcoal/src/Charcoal/Utility/: OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h
Charcoal/src/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
Charcoal/src/Platform/OpenGL/: ImGuiOpenglRenderer.cpp  ImGuiOpenglRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUtil.cpp  OpenGLUtil.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Charcoal/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Charcoal/tools/CMFCompiler/: premake5.lua
Charcoal/tools/CMFCompiler/src/: main.cpp
Sandbox/: CMakeLists.txt  CharcoalProfile-Runtime.json  CharcoalProfile-Shutdown.json  CharcoalProfile-Startup.json  Sandbox.vcxproj  imgui.ini
Sandbox/assets/models/brass_vase/: brass_vase_03_2k.cmf  brass_vase_03_2k.gltf
Sandbox/assets/models/cerberus/: Cerberus.cmf  Cerberus.mtl
Sandbox/assets/models/cerberus/gltf/: Cerberus.cmf  Cerberus.gltf
Sandbox/assets/models/cube/: CMFCompiler  cube.cmf
Sandbox/assets/models/gold/: CMFCompiler  gold.cmf  gold.gltf
Sandbox/assets/models/smooth_cube/: CMFCompiler
Sandbox/assets/models/sphere/: Sphere.cmf  Sphere.mtl
Sandbox/assets/shaders/: EquiToCube.glsl  IrradianceConvolution.glsl  PBR.glsl  RadiancePrefilter.glsl  SkyBox.glsl  SpecularLUT.glsl  Texture.glsl  Tonemapping.glsl
Sandbox/assets/shaders/SPIR-V/PBR/: PBR.frag.glsl  PBR.spr  PBR.vert.glsl
Sandbox/assets/textures/environments/: cmftRelease
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  Sandbox3D.cpp  Sandbox3D.h  SandboxApp.cpp  SandboxApp.h
scripts/: Linux-GenerateProjects.sh  Win-GenerateProjects.bat  build-debug.sh  build-release.sh  run-cmfcompiler-debug.sh  run-sandbox-debug.sh  run-sandbox-release.sh  runccmake.sh
tools/CMFCompiler/: CMakeLists.txt  Sphere.cmf  cube.cmf  flipped_cube.cmf  plane.cmf  premake5.lua  smooth_cube.cmf
tools/CMFCompiler/src/: defines.h  gltf.cpp  main.cpp
tools/CharcoalEditor/: CMakeLists.txt  CharcoalProfile-Shutdown.json  CharcoalProfile-Startup.json  imgui.ini  premake5.lua
tools/CharcoalEditor/assets/shaders/: PBR.glsl  SkyBox.glsl  Texture.glsl  Tonemapping.glsl
tools/CharcoalEditor/src/: CharcoalEditor.cpp  EditorLayer.cpp  EditorLayer.h
tools/CharcoalEditor/src/Utils/: ViewportCameraController.cpp  ViewportCameraController.h
